--- a/server/views/cv.ejs
+++ b/server/views/cv.ejs
@@ -6,7 +6,12 @@
         <h2>Profile</h2>
         <div class="content-block">
           <p>
-            An experienced full-stack web developer specializing in JavaScript development.
+            An experienced full-stack JavaScript web developer.
+          </p>
+          <p>
+            I strive to solve problems in the most simple and efficient ways,
+            and care for code quality, consistency and readability.
+            I'm adaptable, reliable and have a willingness to learn.
           </p>
         </div>
       </section>
@@ -16,10 +21,10 @@
           <h3>Front-end Development</h3>
           <ul>
             <li>JavaScript (ES5 &amp; ES6), HTML &amp; CSS</li>
+            <li>HTTP &amp; consumption of web services (REST)</li>
             <li>Accessibility / Web Standards / SEO</li>
             <li>Cross browser knowledge</li>
             <li>Responsive layouts</li>
-            <li>Sass</li>
             <li>Build tools / Bundlers</li>
             <li>Adobe Suite</li>
             <li>Unit / Integration Testing</li>
@@ -115,7 +120,8 @@
             </div>
           </header>
           <p>
-            Leading the front-end development on various high profile websites built in .NET (C#) solutions; sharing my knowledge and skills with my colleagues and always available to help and offer advice.
+            Leading the front-end development on various high profile websites built in .NET (C#) solutions;
+            sharing my knowledge and skills with my colleagues and always available to help and offer advice.
           </p>
         </section>
         <section class="content-block">
@@ -227,42 +233,6 @@
           </p>
         </div>
       </section>
-      <section class="section frameworks">
-        <h2>Libaries / Frameworks / Concepts</h2>
-        <section class="content-block">
-          <h3>Front-end Development</h3>
-          <ul>
-            <li>AngularJS</li>
-            <li>React / Redux</li>
-            <li>jQuery</li>
-            <li>KnockoutJS</li>
-            <li>Grunt, gulp, webpack</li>
-            <li>OOP / MVC / MVVM</li>
-            <li>Compass / Foundation / Susy / Bootstrap</li>
-            <li>Jasmine / Mocha / SinonJS / PhantomJS / Jest</li>
-            <li>Web Components / Polymer</li>
-            <li>Sencha Touch</li>
-          </ul>
-        </section>
-        <section class="content-block">
-          <h3>Back-end development</h3>
-          <ul>
-            <li>Express.js</li>
-            <li>Kohana</li>
-            <li>Dev Ops / System Administration</li>
-            <li>Linux Containers (LXC / Docker)</li>
-            <li>Vagrant / Puppet / Jenkins / Capistrano / Nagios</li>
-            <li>Command line developer when required (Vim)</li>
-          </ul>
-        </section>
-        <section class="content-block">
-          <h3>General</h3>
-          <ul>
-            <li>Cross-platform competent (OSX, GNU/Linux, Windows)</li>
-            <li>Ubuntu (Desktop &amp; Server)</li>
-          </ul>
-        </section>
-      </section>
       <section class="section education list">
         <h2>Education / Qualifications</h2>
         <section class="content-block">
@@ -301,7 +271,44 @@
           </p>
         </section>
       </section>
-       <section class="section profile">
+      <section class="section frameworks">
+        <h2>Libaries / Frameworks / Concepts</h2>
+        <section class="content-block">
+          <h3>Front-end Development</h3>
+          <ul>
+            <li>AngularJS</li>
+            <li>React / Redux</li>
+            <li>jQuery</li>
+            <li>KnockoutJS</li>
+            <li>Grunt, gulp, webpack</li>
+            <li>OOP / MVC / MVVM</li>
+            <li>Sass</li>
+            <li>Compass / Foundation / Susy / Bootstrap</li>
+            <li>Jasmine / Mocha / SinonJS / PhantomJS / Jest</li>
+            <li>Web Components / Polymer</li>
+            <li>Sencha Touch</li>
+          </ul>
+        </section>
+        <section class="content-block">
+          <h3>Back-end development</h3>
+          <ul>
+            <li>Express.js</li>
+            <li>Kohana</li>
+            <li>Dev Ops / System Administration</li>
+            <li>Linux Containers (LXC / Docker)</li>
+            <li>Vagrant / Puppet / Jenkins / Capistrano / Nagios</li>
+            <li>Command line developer when required (Vim)</li>
+          </ul>
+        </section>
+        <section class="content-block">
+          <h3>General</h3>
+          <ul>
+            <li>Cross-platform competent (OSX, GNU/Linux, Windows)</li>
+            <li>Ubuntu (Desktop &amp; Server)</li>
+          </ul>
+        </section>
+      </section>
+      <section class="section profile">
         <h2>Showcase / Links</h2>
         <div class="content-block">
           <h3>Work / Portfolio</h3>
@@ -321,14 +328,15 @@
         </div>
       </section>
       <section class="section profile">
-        <h2>Hobbies / Interests</h2>
+        <h2>Personal / Hobbies / Interests</h2>
         <div class="content-block">
-          <p>I enjoy keeping active and appreciate my time away from technology.</p>
+          <p>I was born on the 28<sup>th</sup> September 1983 in Johannesburg, South Africa. I have dual British / South African citizenship as well
+          as a Spanish N.I.E. I am fluent in English.</p>
+          <p>Apart from programming, I enjoy the following activities:</p>
           <ul>
             <li>Cycling</li>
             <li>Climbing / Bouldering</li>
             <li>Walking / Hiking</li>
-            <li>Exploring</li>
           </ul>
         </div>
       </section>
