--- a/server/views/cv.ejs
+++ b/server/views/cv.ejs
@@ -6,12 +6,14 @@
         <h2>Profile</h2>
         <div class="content-block">
           <p>
-            An experienced full-stack JavaScript web developer.
+            I'm an experienced web developer specialising in JavaScript and UI development.
           </p>
           <p>
-            I strive to solve problems in the most simple and efficient ways,
-            and care for code quality, consistency and readability.
+            I have a keen interest in the entire stack. I strive to solve problems in the most simple and efficient ways, and care for code quality, consistency and readability.
             I'm adaptable, reliable and have a willingness to learn.
+          </p>
+          <p>
+            I have experience working on a variety of different projects ranging from MVP to large .NET solutions and large SPA's with realtime back-ends.
           </p>
         </div>
       </section>
@@ -56,7 +58,7 @@
       </section>
       <section class="section experience list">
         <h2>Experience</h2>
-        <section class="content-block">
+        <!--<section class="content-block">
           <header class="header">
             <div class="overview">
               <h3 class="company">
@@ -70,7 +72,7 @@
             </div>
           </header>
           <p>Managing my own successful web development company.</p>
-        </section>
+        </section>-->
         <section class="content-block">
           <header class="header">
             <div class="overview">
